# messageformat

./: .gitlint  .pre-commit-config.yaml  .typos.toml  Cargo.toml  README.md  cliff.toml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  release-plz.yml
crates/mf1/: CHANGELOG.md  Cargo.toml  README.md
crates/mf1-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/mf1-macros/src/: lib.rs  load_locales.rs  t_macro.rs
crates/mf1-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/mf1-parser/src/: ast.rs  lib.rs  parser.rs
crates/mf1-parser/src/parser/: test.rs
crates/mf1/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/locales/: en.json  es.json
examples/basic/src/: main.rs
examples/kitchen-sink/: Cargo.toml
examples/kitchen-sink/locales/: en.json  es.json
examples/kitchen-sink/src/: main.rs
