[package]
name = "mf1-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
mf1-parser = { version = "0.1.0", path = "../mf1-parser" }
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
syn = "2.0.69"
thiserror = "1.0.61"
toml = "0.8.14"
