[package]
name = "mf1-macros"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for the mf1 crate"
authors = ["Jade Ellis <jade@ellis.link>"]
readme = "README.md"
repository = "https://github.com/JadedBlueEyes/messageformat"
homepage = "https://github.com/JadedBlueEyes/messageformat/tree/main/crates/mf1-macros"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
mf1-parser = { version = "0.1.4", path = "../mf1-parser" }
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
syn = "2.0.69"
thiserror = "1.0.61"
toml = "0.8.14"
