[package]
name = "mf1-parser"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Parse ICU MessageFormat 1 syntax"
categories = ["internationalization", "localization"]
keywords = ["messageformat", "icu", "syntax", "parse"] 
authors = ["Jade Ellis <jade@ellis.link>"]
readme = "README.md"
repository = "https://github.com/JadedBlueEyes/messageformat"
homepage = "https://github.com/JadedBlueEyes/messageformat/tree/main/crates/mf1-parser"

[dependencies]
icu_plurals = { version = "1.5.0", features = ["serde", "datagen"] }
logos = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
