[package]
name = "mf1"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Use ICU MessageFormat 1 to internationalise your apps"
readme = "README.md"

[dependencies]

mf1-macros = { path = "../mf1-macros", version = "0.1.1", optional = true}

[features]

default = ["macros"]
macros = ["mf1-macros"]
